{
    "name": "GameInput",
    "maps": [
        {
            "name": "Player",
            "id": "a31ee41a-b16f-415d-a94d-396a84df0d19",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "3e2a71b2-4e65-4788-b673-68dae47fa0f6",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "JoyStickTap",
                    "type": "Button",
                    "id": "eb6fb3e4-01c2-43b3-a167-2c7b781175a9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ScreenTouchPoint",
                    "type": "PassThrough",
                    "id": "a88a7f69-76b4-4c2d-a174-44885d11cd31",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ScreenTouch",
                    "type": "Button",
                    "id": "5c44849b-60b7-4074-a76d-10293a4ea430",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f7298a22-afa3-4f04-b806-6c1023ecd317",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1e941cce-d8b4-4695-a235-2f3a334c65c2",
                    "path": "<Gamepad>/leftStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "JoyStickTap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "87a44079-10b9-4dd3-b2bb-582345f5043b",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ScreenTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8ef8fb65-9715-457a-aa2d-aa5afed8508f",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ScreenTouchPoint",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}